--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -84,8 +84,8 @@
               </td>
               <td class="scheP">
                 <p>
-                  (？？？)対バン<br>
-                  Twitterで情報を更新します、お楽しみに！
+                  立命館大学Σ Spirits Jazz Societyさん対バン<br>
+                  @PAUSAVI (名古屋伏見)
                 </p>
               </td>
             </tr>
