--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -131,6 +131,26 @@
                 </p>
               </td>
             </tr>
+            <tr>
+              <td class="scheDate">
+                11/23(土)
+              </td>
+              <td class="scheP">
+                <p>
+                  ？？対バン　情報公開をお楽しみに！
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td class="scheDate">
+                12/1(日)
+              </td>
+              <td class="scheP">
+                <p>
+                  ？？対バン　情報公開をお楽しみに！
+                </p>
+              </td>
+            </tr>
           </table>
         </div>
         <div class="oldSche">
