--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
       <div class="info">
         <h2 class="topText">Information</h2>
         <table class="infoT">
-
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
+              2019/7/15
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                membersページ、scheduleページを更新しました。<br>
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
           <!-- ここから↓ -->
           <tr>
             <!-- 日付 -->
@@ -90,19 +103,7 @@
             </td>
           </tr>
           <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
-          <tr>
-            <!-- 日付 -->
-            <td class="infoDate">
-              2019/1/26
-            </td>
-            <!-- 内容 -->
-            <td class="infoP">
-              <p>
-                新体制がスタートしました。<br>
-                どんな一年になっていくのか楽しみです。応援よろしくお願いします！
-              </p>
-            </td>
-          </tr>
+          
 
         </table>
       </div>
@@ -115,13 +116,13 @@
             <tr>
               <!-- 日付 -->
               <td class="eveDate">
-                2019/6/9
+                2019/8/11.12(日、月)
               </td>
               <!-- 内容 -->
               <td class="eveP">
                 <p>
-                   Be Happy Jazz Festival<br>
-                   ＠パティオ池鯉鮒（知立市文化会館）
+                  山野BigBand Jazz Festival<br>
+                  ＠大宮ソニックシティ 大ホール
                 </p>
               </td>
             </tr>
@@ -129,12 +130,12 @@
             <tr>
               <!-- 日付 -->
               <td class="eveDate">
-                2019/6/15
+                2019/9/7(土)
               </td>
               <!-- 内容 -->
               <td class="eveP">
                 <p>
-                  名大祭＠名古屋大学
+                  Summer Concert 2019＠昭和文化小劇場
                 </p>
               </td>
             </tr>
