--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -128,6 +128,7 @@
               <td class="scheP">
                 <p>
                   東海大会
+                  ＠中電ホール
                 </p>
               </td>
             </tr>
@@ -137,7 +138,8 @@
               </td>
               <td class="scheP">
                 <p>
-                  ？？対バン　情報公開をお楽しみに！
+                  阪大対バン
+                  ＠100BAN HALL(三宮駅から徒歩7分)
                 </p>
               </td>
             </tr>
@@ -147,8 +149,8 @@
               </td>
               <td class="scheP">
                 <p>
-                  ？？対バン　情報公開をお楽しみに！
-                </p>
+                  神大対バン
+                  ＠Live Space Piacere
               </td>
             </tr>
           </table>
