--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
             <tr>
               <!-- 日付 -->
               <td class="eveDate">
-                2019/8/11.12(日、月)
+                2019/11/23(土)
               </td>
               <!-- 内容 -->
               <td class="eveP">
                 <p>
-                  山野BigBand Jazz Festival<br>
-                  ＠大宮ソニックシティ 大ホール
+                  阪大対バン
+                  ＠100BAN HALL(三宮駅から徒歩7分)
                 </p>
               </td>
             </tr>
@@ -130,12 +130,13 @@
             <tr>
               <!-- 日付 -->
               <td class="eveDate">
-                2019/9/7(土)
+                2019/12/1(日)
               </td>
               <!-- 内容 -->
               <td class="eveP">
                 <p>
-                  Summer Concert 2019＠昭和文化小劇場
+                  神大対バン
+                  ＠Live Space Piacere
                 </p>
               </td>
             </tr>
@@ -150,7 +151,7 @@
         <img src="image/2018Profile.JPG" class="topImage">
         <div class="ploD">
           <p class="ploP">
-            私たちEdel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
+            私たちEdel Rote Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
             練習は真面目に楽しくやっています。<br>
             興味がある方は気軽に練習やイベントに遊びに来てください！
           </p>
