--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <img src="image/2018Profile.JPG" class="topImage">
         <div class="ploD">
           <p class="ploP">
-            私たちEdel Rote Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
+            私たちEdel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
             練習は真面目に楽しくやっています。<br>
             興味がある方は気軽に練習やイベントに遊びに来てください！
           </p>
