informationを更新しました

--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
+              2020/1/5
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                第54会定期演奏会を行いました。<br>
+                来年度も応援をよろしくお願いいたします！
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
               2019/7/15
             </td>
             <!-- 内容 -->
@@ -88,22 +103,6 @@
             </td>
           </tr>
           <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
-          <!-- ここから↓ -->
-          <tr>
-            <!-- 日付 -->
-            <td class="infoDate">
-              2019/4/1
-            </td>
-            <!-- 内容 -->
-            <td class="infoP">
-              <p>
-                サイトのリニューアルをしました。<br>
-                不具合などございましたらおしらせください。
-              </p>
-            </td>
-          </tr>
-          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
-          
 
         </table>
       </div>
