--- a/about/about.html
+++ b/about/about.html
@@ -36,7 +36,7 @@
               え～でるの基本構成はサックス５人、トロンボーン４人、トランペット５人、ベース・ドラムス・ギター・ピアノ各１人です。
             </p>
             <p>
-              18人による演奏はとても迫力があり、ビッグバンドジャズはアドリブソロやダイナミックなアンサンブルなど聴き所も多数あります。<br>
+              18人による演奏はとても迫力があり、ビッグバンドジャズはアドリブソロやダイナミックなアンサンブルなど聴き所も多くあります。<br>
               各自の表現の自由度も高く、団体の中にあっても生かしていけると思います。<br>
               ビッグバンドってよく分からないという人も大丈夫、先輩が色々教えてくれます。<br>
               ジャズというと難解で堅苦しい印象があるかもしれません（決してそう言った面は否定しません）が、それだけにやりがいもあり、慣れていくにつれ個人個人それぞれの楽しみ方も見つけることが出来ると思います。<br>
