--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
+              2020/2/27
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                scheduleを更新しました<br>
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
               2020/1/5
             </td>
             <!-- 内容 -->
