--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -28,7 +28,7 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                3/8(金)-3/11(月)
+                3/18(水)-3/21(土)
               </td>
               <td class="scheP">
                 <p>
@@ -39,7 +39,7 @@
             <!-- ここまでコピペ -->
             <tr>
               <td class="scheDate">
-                4/3(水).4/10(水)
+                4/8(水).4/15(水)
               </td>
               <td class="scheP">
                 <p>
@@ -49,17 +49,27 @@
             </tr>
             <tr>
               <td class="scheDate">
-                4/12(金)
+                5/31(日)
               </td>
               <td class="scheP">
                 <p>
-                  産婦人科情報交換会コンボ演奏
+                  山野予選
                 </p>
               </td>
             </tr>
             <tr>
               <td class="scheDate">
-                6/9(日)
+                6/13(土)
+              </td>
+              <td class="scheP">
+                <p>
+                  名大祭
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td class="scheDate">
+                6/14(日)
               </td>
               <td class="scheP">
                 <p>
@@ -68,41 +78,31 @@
                 </p>
               </td>
             </tr>
-            <tr>
+          <!--  <tr>
               <td class="scheDate">
-                6/15(土)
+                7/4(土)
               </td>
               <td class="scheP">
                 <p>
-                  名大祭＠名古屋大学
+                  対バン vs.金沢大学Modern Jazz Society<br>
+                  @伏見ライオンシアター
+                </p>
+              </td>
+            </tr>  -->
+            <tr>
+              <td class="scheDate">
+                9/5.6(土、日)
+              </td>
+              <td class="scheP">
+                <p>
+                  山野Big Band Jazz Contest<br>
+                  ＠
                 </p>
               </td>
             </tr>
             <tr>
               <td class="scheDate">
-                7/7(日)
-              </td>
-              <td class="scheP">
-                <p>
-                  立命館大学Σ Spirits Jazz Societyさん対バン<br>
-                  @PAUSAVI (名古屋伏見)
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td class="scheDate">
-                8/11.12(日、月)
-              </td>
-              <td class="scheP">
-                <p>
-                  山野BigBand Jazz Festival<br>
-                  ＠大宮ソニックシティ 大ホール
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td class="scheDate">
-                9/7(土)
+                9/19(土)
               </td>
               <td class="scheP">
                 <p>
@@ -112,51 +112,40 @@
             </tr>
             <tr>
               <td class="scheDate">
-                10/13(日)
+                10/17(土)
               </td>
               <td class="scheP">
                 <p>
                   Joint Live<br>
-                  ＠中村文化小劇場
+                  
                 </p>
               </td>
             </tr>
-            <tr>
+      <!--      <tr>
               <td class="scheDate">
-                11/17(日)
+                11/?
               </td>
               <td class="scheP">
                 <p>
                   東海大会
-                  ＠中電ホール
                 </p>
               </td>
-            </tr>
+            </tr> -->
+
             <tr>
               <td class="scheDate">
-                11/23(土)
+                1/6(水)
               </td>
               <td class="scheP">
                 <p>
-                  阪大対バン
-                  ＠100BAN HALL(三宮駅から徒歩7分)
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td class="scheDate">
-                12/1(日)
-              </td>
-              <td class="scheP">
-                <p>
-                  神大対バン
-                  ＠Live Space Piacere
+                  定期演奏会
               </td>
             </tr>
           </table>
         </div>
         <div class="oldSche">
           <h2 class="subText">過去の演奏会</h2>
+          <p class="schePast"><a href="2019.html">2019年度</a></p>
           <p class="schePast"><a href="2018.html">2018年度</a></p>
           <p class="schePast"><a href="2017.html">2017年度</a></p>
           <p class="schePast"><a href="2016.html">2016年度</a></p>
