--- a/schedule/2018.html
+++ b/schedule/2018.html
@@ -97,7 +97,7 @@
 				<td class="note-field">-</td>
 			</tr>
 			<tr>
-				<td class="date-field">1/5(日)</td>
+				<td class="date-field">1/5(土)</td>
 				<td class="event-field">第53回定期演奏会<br>@アートピアホール</td>
 				<td class="note-field">-</td>
 			</tr>
