--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <div class="info">
         <h2 class="topText">Information</h2>
         <table class="infoT">
+
           <!-- ここから↓ -->
           <tr>
             <!-- 日付 -->
@@ -68,7 +69,7 @@
             <!-- 内容 -->
             <td class="infoP">
               <p>
-                scheduleを更新しました<br>
+                scheduleを更新しました
               </p>
             </td>
           </tr>
@@ -140,19 +141,7 @@
               </td>
             </tr>
 
-            <tr>
-              <!-- 日付 -->
-              <td class="eveDate">
-                2019/12/1(日)
-              </td>
-              <!-- 内容 -->
-              <td class="eveP">
-                <p>
-                  神大対バン
-                  ＠Live Space Piacere
-                </p>
-              </td>
-            </tr>
+
           </table>
           <a href="schedule/schedule.html" class="eveA">もっと見る</a>
         </div>
