--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
+              2020/9/19
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                新型コロナウイルスの影響により活動を停止しておりましたが、現在活動を再開しております。<br>
+                新入生向けのインスタライブなどを予定しておりますので、最新情報は公式Twitterを確認してください。
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
               2020/2/27
             </td>
             <!-- 内容 -->
