--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
+              2020/10/24
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                インスタライブを行いました。ご視聴ありがとうございました。<br>
+                翌週から新入生を受け入れての活動を行っています。<br>
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
               2020/9/19
             </td>
             <!-- 内容 -->
