--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
+              2020/11/09
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                Scheduleを更新しました。<br>
+                今年度は11月にオータムライブ、2月に定期演奏会を行う予定です。<br>
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
               2020/10/24
             </td>
             <!-- 内容 -->
@@ -113,7 +128,7 @@
             <!-- 内容 -->
             <td class="infoP">
               <p>
-                第54会定期演奏会を行いました。<br>
+                第54回定期演奏会を行いました。<br>
                 来年度も応援をよろしくお願いいたします！
               </p>
             </td>
