--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -28,119 +28,46 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                3/18(水)-3/21(土)
+                3月-8月
               </td>
               <td class="scheP">
                 <p>
-                  春合宿@湯本館
+                  新型コロナウイルスの影響により活動停止
                 </p>
               </td>
             </tr>
             <!-- ここまでコピペ -->
             <tr>
               <td class="scheDate">
-                4/8(水).4/15(水)
+                10/24(土)
               </td>
               <td class="scheP">
                 <p>
-                  新入生歓迎Live@山の上音楽練習場
+                  新入生歓迎インスタライブ
                 </p>
               </td>
             </tr>
             <tr>
               <td class="scheDate">
-                5/31(日)
+                11/28(土)
               </td>
               <td class="scheP">
                 <p>
-                  山野予選
+                  オータムライブ
                 </p>
               </td>
             </tr>
             <tr>
               <td class="scheDate">
-                6/13(土)
+                2/13(土)
               </td>
               <td class="scheP">
                 <p>
-                  名大祭
+                  第55回定期演奏会
                 </p>
               </td>
             </tr>
-            <tr>
-              <td class="scheDate">
-                6/14(日)
-              </td>
-              <td class="scheP">
-                <p>
-                  Be Happy Jazz Festival<br>
-                  ＠パティオ池鯉鮒（知立市文化会館）
-                </p>
-              </td>
-            </tr>
-          <!--  <tr>
-              <td class="scheDate">
-                7/4(土)
-              </td>
-              <td class="scheP">
-                <p>
-                  対バン vs.金沢大学Modern Jazz Society<br>
-                  @伏見ライオンシアター
-                </p>
-              </td>
-            </tr>  -->
-            <tr>
-              <td class="scheDate">
-                9/5.6(土、日)
-              </td>
-              <td class="scheP">
-                <p>
-                  山野Big Band Jazz Contest<br>
-                  ＠
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td class="scheDate">
-                9/19(土)
-              </td>
-              <td class="scheP">
-                <p>
-                  Summer Concert 2019＠昭和文化小劇場
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td class="scheDate">
-                10/17(土)
-              </td>
-              <td class="scheP">
-                <p>
-                  Joint Live<br>
-                  
-                </p>
-              </td>
-            </tr>
-      <!--      <tr>
-              <td class="scheDate">
-                11/?
-              </td>
-              <td class="scheP">
-                <p>
-                  東海大会
-                </p>
-              </td>
-            </tr> -->
 
-            <tr>
-              <td class="scheDate">
-                1/6(水)
-              </td>
-              <td class="scheP">
-                <p>
-                  定期演奏会
-              </td>
-            </tr>
           </table>
         </div>
         <div class="oldSche">
