--- a/members/members.html
+++ b/members/members.html
@@ -24,9 +24,10 @@
       <main class="main">
         <img src="../image/2018members.jpg" class="topImage">
         <h2 class="topText">Members</h2>
-        <p class="memberPlofile"><a href="2019/index.html">2019年度(現役1年生)</a></p>
-        <p class="memberPlofile"><a href="2018/index2.html">2018年度(現役2年生)</a></p>
-        <p class="memberPlofile"><a href="2017/index.html">2017年度(現役3年生)</a></p>
+        <p class="memberPlofile"><a href="2020/index.html">2020年度(現役1年生)</a></p>
+        <p class="memberPlofile"><a href="2019/index.html">2019年度(現役2年生)</a></p>
+        <p class="memberPlofile"><a href="2018/index2.html">2018年度(現役3年生)</a></p>
+        <p class="memberPlofile"><a href="2017/index.html">2017年度</a></p>
         <p class="memberPlofile"><a href="2016/index.html">2016年度</a></p>
         <p class="memberPlofile"><a href="2015/index.html">2015年度</a></p>
         <p class="memberPlofile"><a href="2014/index.html">2014年度</a></p>
