--- a/index.html
+++ b/index.html
@@ -64,6 +64,35 @@
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
+              2021/01/02
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                membersを更新しました。<br>
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
+              2020/11/28
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                オータムライブを行いました。<br>
+                ご来場・ご視聴ありがとうございました。<br>
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
               2020/11/09
             </td>
             <!-- 内容 -->
@@ -175,13 +204,12 @@
             <tr>
               <!-- 日付 -->
               <td class="eveDate">
-                2019/11/23(土)
+                2021/02/13(土)
               </td>
               <!-- 内容 -->
               <td class="eveP">
                 <p>
-                  阪大対バン
-                  ＠100BAN HALL(三宮駅から徒歩7分)
+                  第55回定期演奏会
                 </p>
               </td>
             </tr>
