--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
+              2021/03/09
+            </td>
+            <!-- 内容 -->
+            <td class="infoP">
+              <p>
+                第55回定期演奏会を行いました。<br>
+                2020年度の活動としてはこれで終了となります。<br>
+                ありがとうございました！<br>
+              </p>
+            </td>
+          </tr>
+          <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+          <!-- ここから↓ -->
+          <tr>
+            <!-- 日付 -->
+            <td class="infoDate">
               2021/01/02
             </td>
             <!-- 内容 -->
