--- a/link/link.html
+++ b/link/link.html
@@ -28,7 +28,7 @@
         <div class="linkD band">
           <h3>Band</h3>
           <p>
-            <a href="http://www.geocities.jp/assariokayu/index1.html" target="_blank">フュージョンセクション</a>
+            <a href="http://fusionsection.web.fc2.com/" target="_blank">フュージョンセクション</a>
             　部室を一緒に使わせていただいているフュージョンさんです。お世話になってます。
           </p>
         </div>
@@ -110,12 +110,10 @@
             <a href="http://www.tokuzo.com/" target="_blank">tokuzo</a>
             <br>
             <a href="http://www.nagoya-bluenote.com/" target="_blank">blue note nagoya</a>
+              残念ながらなくなってしまいました泣
             <br>
             <a href="https://www.goodncool.nagoya/" target="_blank">good'n cool</a>
             　ライブでお世話になりました。
-            <br>
-            <a href="http://cafe-popcorn.sakura.ne.jp/" target="_blank">イベントカフェバー POPCORN</a>
-            　ジャズの日でお世話になっています。<br>
             <br>
             <a href="https://www.imago-jazz.com/" target="_blank">ライブハウスImago</a>
             　コンボ活動でお世話になりました。<br>
