--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="header"></div>
     <!-- 画面真ん中の情報 -->
     <main class="main">
-      <img src="image/2020Top.jpg" class="topImage">
+      <img src="image/2020Top2.jpg" class="topImage">
 
 
       <div class="info">
