--- a/about/about.html
+++ b/about/about.html
@@ -21,7 +21,7 @@
     <div id="header"></div>
     <div class="wrap">
       <main class="main">
-        <img src="../image/2020about.jpg" class="topImage">
+        <img src="../image/2020about.JPG" class="topImage">
         <div class="aboutA">
           <h2 class="topText">About us</h2>
           <p>
