--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- 画面真ん中の情報 -->
     <main class="main">
       <img src="./image/2020Top.JPG" class="topImage">
-
+      <!-- 拡張子注意！大文字小文字など -->
       <div class="info">
         <h2 class="topText">Information</h2>
         <table class="infoT">
