--- a/link/link.html
+++ b/link/link.html
@@ -22,7 +22,7 @@
     <div class="wrap">
       <div id="header"></div>
       <main class="main">
-        <img src="../image/2020links.jpg" class="topImage">
+        <img src="../image/2020links.JPG" class="topImage">
         <h2 class="topText">Link</h2>
 
         <div class="linkD band">
