--- a/contact/contact.html
+++ b/contact/contact.html
@@ -22,7 +22,7 @@
     <div class="wrap">
       <div id="header"></div>
       <main class="main">
-        <img src="../image/2020contact.jpg" class="topImage">
+        <img src="../image/2020contact.JPG" class="topImage">
         <h2 class="topText">Contact</h2>
         <div class="contactP">
           <p>
