add information for test

--- a/index.html
+++ b/index.html
@@ -59,7 +59,21 @@
         <h2 class="topText">Information</h2>
         <table class="infoT">
 
-          <!-- ここから↓ -->
+            <!-- ここから↓ -->
+            <tr>
+              <!-- 日付 -->
+              <td class="infoDate">
+                2021/03/11
+              </td>
+              <!-- 内容 -->
+              <td class="infoP">
+                <p>
+                テスト。中の人が交代しました。<br>
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+            <!-- ここから↓ -->
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
