add information,schedule for 2020 and welcome live

--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
         <table class="infoT">
 
             <!-- ここから↓ -->
+            <tr>
+              <!-- 日付 -->
+              <td class="infoDate">
+                2021/04/09
+              </td>
+              <!-- 内容 -->
+              <td class="infoP">
+                <p>
+                Scheduleを更新しました。<br>
+                4/14,17,21,24,28の17時から楽器体験及び練習見学を受け付けます。<br>
+                最新情報は公式Twitterをご確認ください。
+            
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+            <!-- ここから↓ -->
           <tr>
             <!-- 日付 -->
             <td class="infoDate">
