--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -28,18 +28,8 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                3月-8月
-              </td>
-              <td class="scheP">
-                <p>
-                  新型コロナウイルスの影響により活動停止
-                </p>
-              </td>
-            </tr>
-            <!-- ここまでコピペ -->
-            <tr>
-              <td class="scheDate">
-                10/24(土)
+                5月8日(土)<br>
+                5月12日(水)
               </td>
               <td class="scheP">
                 <p>
@@ -47,31 +37,15 @@
                 </p>
               </td>
             </tr>
-            <tr>
-              <td class="scheDate">
-                11/28(土)
-              </td>
-              <td class="scheP">
-                <p>
-                  オータムライブ
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td class="scheDate">
-                3/7(日)
-              </td>
-              <td class="scheP">
-                <p>
-                  第55回定期演奏会
-                </p>
-              </td>
+            <!-- ここまでコピペ -->
+            
             </tr>
 
           </table>
         </div>
         <div class="oldSche">
           <h2 class="subText">過去の演奏会</h2>
+          <p class="schePast"><a href="2020.html">2020年度</a></p>
           <p class="schePast"><a href="2019.html">2019年度</a></p>
           <p class="schePast"><a href="2018.html">2018年度</a></p>
           <p class="schePast"><a href="2017.html">2017年度</a></p>
