modify the information

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <td class="infoP">
                 <p>
                 Scheduleを更新しました。<br>
-                4/14,17,21,24,28の17時から楽器体験及び練習見学を受け付けます。<br>
+                楽器体験及び練習見学を受け付けております。<br>
                 最新情報は公式Twitterをご確認ください。
             
                 </p>
