--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
             <tr>
               <!-- 日付 -->
               <td class="infoDate">
+                2021/05/08
+              </td>
+              <!-- 内容 -->
+              <td class="infoP">
+                <p>
+                  新入生歓迎インスタライブを行いました。アーカイブは<a href="https://www.instagram.com/tv/COm8aTRA9C5/?igshid=1tn51o179cgle">こちら</a><br>
+                  5/12の同ライブは中止になりました。<br>
+                  5/15より新入生を加えた新体制で活動します。<br>
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+            <!-- ここから↓ -->
+            <tr>
+              <!-- 日付 -->
+              <td class="infoDate">
                 2021/04/09
               </td>
               <!-- 内容 -->
