add information and schedule

--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -29,11 +29,23 @@
             <tr>
               <td class="scheDate">
                 5月8日(土)<br>
-                5月12日(水)
+                <s>5月12日(水)</s><br>
               </td>
               <td class="scheP">
                 <p>
                   新入生歓迎インスタライブ
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                9月1日(水)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  Summer Concert2021
                 </p>
               </td>
             </tr>
