--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
             <tr>
               <!-- 日付 -->
               <td class="infoDate">
+                2021/06/04
+              </td>
+              <!-- 内容 -->
+              <td class="infoP">
+                <p>
+                Scheduleを更新しました。<br>
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+            <!-- ここから↓ -->
+            <tr>
+              <!-- 日付 -->
+              <td class="infoDate">
                 2021/06/02
               </td>
               <!-- 内容 -->
