link tukete mita

--- a/schedule/2020.html
+++ b/schedule/2020.html
@@ -51,7 +51,9 @@
 			</tr>
 			<tr>
 				<td class="date-field">3/7(日)</td>
-				<td class="event-field">第55回定期演奏会<br>@東海市芸術劇場</td>
+				<td class="event-field">
+                    <a　href=“https://www.instagram.com/tv/CMG2ZEvAyVi/?utm_medium=copy_link”>
+                    第55回定期演奏会</a><br>@東海市芸術劇場</td>
 				<td class="note-field">-</td>
 			</tr>
 
