--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -33,7 +33,8 @@
               </td>
               <td class="scheP">
                 <p>
-                  新入生歓迎インスタライブ
+                  
+                  <a　href="https://www.instagram.com/tv/COm8aTRA9C5/?igshid=1tn51o179cgle">新入生歓迎インスタライブ</a> <br>
                 </p>
               </td>
             </tr>
