--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -33,8 +33,7 @@
               </td>
               <td class="scheP">
                 <p>
-                <a href="https://www.instagram.com/tv/COm8aTRA9C5/?igshid=1tn51o179cgle">新入生歓迎インスタライブ</a> <br>
-                <br>
+                <a href="https://www.instagram.com/tv/COm8aTRA9C5/?igshid=1tn51o179cgle">新入生歓迎インスタライブ</a>
                 </p>
               </td>
             </tr>
@@ -42,11 +41,11 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                9月1日(水)<br>
+                <s>9月1日(水)</s><br>
               </td>
               <td class="scheP">
                 <p>
-                  Summer Concert 2021
+                  <s>Summer Concert 2021</s>
                 </p>
               </td>
             </tr>
@@ -54,11 +53,58 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                10月16日(土)<br>
+                9月1日~<br>
               </td>
               <td class="scheP">
                 <p>
-                  Joint LIVE 2021
+                  新型コロナウイルス感染症の感染拡大により活動中止
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                <s>10月2日(土)</s><br>
+              </td>
+              <td class="scheP">
+                <p>
+                  <s>稲武グリーンフェス</s>
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                <s>10月16日(土)</s><br>
+              </td>
+              <td class="scheP">
+                <p>
+                  <s>Joint LIVE 2021</s>
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                11月14日(日)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  セントレア空港音楽祭 Centrair Cool Jazz Festival
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <tr>
+              <td class="scheDate">
+                <s>11月21日(日)</s><br>
+              </td>
+              <td class="scheP">
+                <p>
+                  <s>東海大会</s>
                 </p>
               </td>
             </tr>
@@ -71,6 +117,18 @@
               <td class="scheP">
                 <p>
                   対バンvs.岐阜大学New Stars Jazz Orchestra
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                2月23日(水・祝)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  第56回定期演奏会<br>＠知多市勤労文化会館
                 </p>
               </td>
             </tr>
