--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
             <tr>
               <!-- 日付 -->
               <td class="infoDate">
+                2021/11/28
+              </td>
+              <!-- 内容 -->
+              <td class="infoP">
+                <p>
+                11/14にセントレア空港音楽祭へ参加しました。<br>
+                (アーカイブは<a href="https://youtu.be/bQX3oSxhb9k">こちら</a>)<br>
+                12/04の岐阜大学対バンは
+                <a href="https://instagram.com/edel_rote_j_o_?utm_medium=copy_link">こちら</a>からInstagram LIVEにて配信予定です。<br>
+                詳しくは<a href="./schedule/flyer/2021vsNSJO.jpg">フライヤー</a>または公式SNSをご確認ください。<br>
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+            <!-- ここから↓ -->
+            <tr>
+              <!-- 日付 -->
+              <td class="infoDate">
                 2021/09/28
               </td>
               <!-- 内容 -->
@@ -328,7 +346,7 @@
 
       <div class="profile">
         <h2 class="topText">Profile</h2>
-        <img src="image/2018Profile.JPG" class="topImage">
+        <img src="image/2021Top1.jpg" class="topImage">
         <div class="ploD">
           <p class="ploP">
             私たちEdel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
