--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -45,7 +45,7 @@
               </td>
               <td class="scheP">
                 <p>
-                  <s>Summer Concert 2021</s>
+                  <s>Summer Concert 2021<a href="./flyer/2021sc.JPG">(flyer)</a></s>
                 </p>
               </td>
             </tr>
@@ -53,7 +53,7 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                9月1日~<br>
+                9月1日~9月30日<br>
               </td>
               <td class="scheP">
                 <p>
@@ -93,7 +93,7 @@
               </td>
               <td class="scheP">
                 <p>
-                  セントレア空港音楽祭 Centrair Cool Jazz Festival
+                <a href="https://youtu.be/bQX3oSxhb9k">セントレア空港音楽祭 Centrair Cool Jazz Festival</a>
                 </p>
               </td>
             </tr>
@@ -113,10 +113,13 @@
             <tr>
               <td class="scheDate">
                 12月4日(土)<br>
+                
               </td>
               <td class="scheP">
                 <p>
-                  対バンvs.岐阜大学New Stars Jazz Orchestra
+                  対バンvs.岐阜大学New Stars Jazz Orchestra<a href="./flyer/2021vsNSJO.jpg">(flyer)</a><br>
+                  Instagram LIVE<a href="https://instagram.com/edel_rote_j_o_?utm_medium=copy_link"> @edel_rote_j_o_</a>
+                  
                 </p>
               </td>
             </tr>
@@ -128,7 +131,7 @@
               </td>
               <td class="scheP">
                 <p>
-                  第56回定期演奏会<br>＠知多市勤労文化会館
+                  第56回定期演奏会<br>知多市勤労文化会館
                 </p>
               </td>
             </tr>
