add flyer for centrair in schedule

--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -93,7 +93,7 @@
               </td>
               <td class="scheP">
                 <p>
-                <a href="https://youtu.be/bQX3oSxhb9k">セントレア空港音楽祭 Centrair Cool Jazz Festival</a>
+                <a href="https://youtu.be/bQX3oSxhb9k">セントレア空港音楽祭 Centrair Cool Jazz Festival</a><a href="./flyer/2021centrair.jpg">(flyer)</a>
                 </p>
               </td>
             </tr>
