add information and add schedule

--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
             <tr>
               <!-- 日付 -->
               <td class="infoDate">
+                2021/02/20
+              </td>
+              <!-- 内容 -->
+              <td class="infoP">
+                <p>
+                2/23に<a href="./schedule/flyer/2022teien.jpg">第56回定期演奏会</a>を開催いたします。<br>
+                蔓延防止措置延長のため開場時間は14:10、開演時間は14:40に変更しております。加えて、ご来場は部員の家族、2代上までのOBOGに限らせていただきます。<br>
+                当日のご予約はedelrote2021@gmail.comへご連絡ください。
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+            <!-- ここから↓ -->
+            <tr>
+              <!-- 日付 -->
+              <td class="infoDate">
                 2021/11/28
               </td>
               <!-- 内容 -->
