--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -131,7 +131,8 @@
               </td>
               <td class="scheP">
                 <p>
-                  第56回定期演奏会<br>知多市勤労文化会館
+                  第56回定期演奏会<a href="./flyer/2022teien.jpg">(flyer)</a><br>
+                  知多市勤労文化会館
                 </p>
               </td>
             </tr>
