add information and modify schedule to release brochure

--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
             <tr>
               <!-- 日付 -->
               <td class="infoDate">
+                2021/02/22
+              </td>
+              <!-- 内容 -->
+              <td class="infoP">
+                <p>
+                第56回定期演奏会のパンフレットを公開しました。<br>
+                <a href="./schedule/flyer/2022brochure.pdf">こちら</a>からご覧いただけます。<br>
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+            <!-- ここから↓ -->
+            <tr>
+              <!-- 日付 -->
+              <td class="infoDate">
                 2021/02/20
               </td>
               <!-- 内容 -->
