--- a/index.html
+++ b/index.html
@@ -63,7 +63,23 @@
             <tr>
               <!-- 日付 -->
               <td class="infoDate">
-                2021/02/22
+                2022/04/01
+              </td>
+              <!-- 内容 -->
+              <td class="infoP">
+                <p>
+                第56回定期演奏会のアーカイブを公開しました。<br>
+                <a href="https://youtube.com/playlist?list=PLWuk9eAMjgfWvpdpTJIL1VnlGDmYnUYpw">こちら</a>からご覧いただけます。<br>
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ↑(改行する時は文の後ろに<br>をつける) -->
+            
+            <!-- ここから↓ -->
+            <tr>
+              <!-- 日付 -->
+              <td class="infoDate">
+                2022/02/22
               </td>
               <!-- 内容 -->
               <td class="infoP">
