--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -131,7 +131,7 @@
               </td>
               <td class="scheP">
                 <p>
-                  第56回定期演奏会<a href="./flyer/2022teien.jpg">(flyer)</a><a href="./flyer/2022brochure.pdf">(brochure)</a><br>
+                  <a href="https://youtube.com/playlist?list=PLWuk9eAMjgfWvpdpTJIL1VnlGDmYnUYpw">第56回定期演奏会</a><a href="./flyer/2022teien.jpg">(flyer)</a><a href="./flyer/2022brochure.pdf">(brochure)</a><br>
                   知多市勤労文化会館
                 </p>
               </td>
