--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
                 .item {
                   /* 横スクロール用 */
                   display: inline-block;
-                  width: 55%;
-                  margin: 0px;
+                  width: 55vw;
+                  margin: 0vw;
                 }
 
               </style>
